# flowopt

./: .dockerignore  .eslintrc.cjs  .gitignore  Cargo.toml  Dockerfile  JUSTFILE  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: fly-deploy.yml
app/: root.tsx
app/routes/: _index.tsx  projects._index.tsx
backend/: Cargo.toml  fly.toml
backend/src/: lib.rs
backend/src/models/: worker.rs
backend/src/web/: mod.rs  universal.rs  util.rs
backend/src/web/controllers/: workers.rs
components/: nav.tsx  ui-display.tsx
components/ui/: badge.tsx  button.tsx  navigation-menu.tsx  scroll-area.tsx
flowopt/: Cargo.toml
flowopt/src/: lib.rs  main.rs  models.rs  optimizers.rs
flowopt/src/models/: nwt.rs
flowopt/src/optimizers/: tpe.rs
