[package]
name = "flowopt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3.30"
axum-util = "0.2.2"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["v7", "serde"] }
