[package]
name = "flowopt"
authors = [
    "Max Newcomer <maxwnewcomer@gmail.com>"
]
version = "0.1.0"
edition = "2021"
default-run = "flowopt"

[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
actix-web = {version = "4.2.1"}
clap = { version = "4.1.1", features = ["derive"] }
env_logger = { version = "0.10.0"}
tpe = {version = "0.2.0"}
rand = {version = "0.8.5"}
